fix: all chats are visible on mobile

--- a/src/components/HomePage/ChatsContainer.module.scss
+++ b/src/components/HomePage/ChatsContainer.module.scss
@@ -7,4 +7,8 @@
     gap: math.div($padding, 2);
     height: 100%;
     overflow: hidden auto;
+
+    @media (orientation: portrait) {
+        padding-bottom: 80px;
+    }
 }
